--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/translate": "^8.5.1",
+    "axios": "^1.8.1",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.1.0",
     "framer-motion": "^12.4.10",
